# pexts

./: .cvsignore  .hgtags  CHANGES  License-Boilerplate-MPL-LGPL.txt  Makefile  Makefile.in  README  README.modules  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.ac.in  configure.in
debian/: README.Debian  changelog  control  copyright  docs  pexts-admintools.files  pexts-bzip2.files  pexts-curses.files  pexts-mhash.files  pexts-newt.dirs  pexts-newt.files  pexts-openldap.files  pexts-pcre.files  pike7-pexts-admintools.files  pike7-pexts-bzip2.files  pike7-pexts-curses.files  pike7-pexts-mhash.files  pike7-pexts-pcre.files  pike7.2-pexts-admintools.files  pike7.2-pexts-bzip2.files  pike7.2-pexts-curses.files  pike7.2-pexts-geoip.files  pike7.2-pexts-mcrypt.files  pike7.2-pexts-mhash.files  pike7.2-pexts-newt.files  pike7.2-pexts-pcre.files  pike7.4-pexts-admintools.files  pike7.4-pexts-bzip2.files  pike7.4-pexts-curses.files  pike7.4-pexts-geoip.files  pike7.4-pexts-mhash.files  pike7.4-pexts-newt.files  pike7.4-pexts-pcre.files  pike7.6-pexts-admintools.files  pike7.6-pexts-bzip2.files  pike7.6-pexts-curses.files  pike7.6-pexts-geoip.files  pike7.6-pexts-mcrypt.files  pike7.6-pexts-mhash.files  pike7.6-pexts-newt.examples  (+3 more)
debian/patches/: 01_pcre_debian.diff  02_smartlink_rpath.diff
pmod/: RSH.pmod
pmod/FDF.pmod/: module.pmod
pmod/Maildir.pmod/: module.pmod
pmod/Newt.pmod/: module.pmod
pmod/XML.pmod/: AbstractCallbacks.pike
src/: .cvsignore  Makefile.in  Makefile.rules.in  autogen.sh  caudium_util.h  configure.ac  configure.ac.in  configure.in  module_makefile.in  pexts.h  pexts_ver.c
src/AVS/: .cvsignore  Makefile.in  Makefile.pre.in  README  README.missing  acconfig.h  avs-pike.h  configure.ac  configure.in  convert.c  count.c  dummy.c  index.c  phrase.c  search.c  spell.c  stem.c  thesaurus.c
src/AVS/test/: index.pike  search.pike
src/AdminTools/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  acinclude.m4  at_common.c  at_common.h  at_config.h  at_config.h.in  at_directory.c  at_mntent.h  at_pam.c  at_quota.c  at_shadow.c  at_system.c  atmain.c  configure.ac  configure.in
src/AdminTools/pike_autoconf/: README  pike.m4
src/Curses/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  configure.ac  configure.in  curses.c  screen.c  window.c
src/FNV/: Makefile  fnv.c  testFNV.pike
src/GeoIP/: .cvsignore  Makefile.in  Makefile.pre.in  configure.ac  geoip_main.c
src/Gzip/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  configure.ac  configure.in  gzip_main.c
src/Magic/: .cvsignore  Makefile.in  configure.ac  magic_main.c
src/Mailstore/: .cvsignore  .pexts_autogen_extra  Makefile.in  Makefile.pre.in  configure.ac  mailstore.h  mailstore_main.c  test.pike
src/Mailstore/libmutt/: .cvsignore  Makefile.am  Makefile.in  README.PExts  autogen.sh  configure.ac  configure.in
src/Mailstore/libmutt/imap/: Makefile.am  auth.h
src/Mailstore/libmutt/src/: .cvsignore  Makefile.am  browser.h  mutt.h  muttconfig.h.in  muttconfig.h.in~  test.c
src/Mhash/: Makefile.in  configure.ac
src/Newt/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  configure.ac  configure.in  newt.c
src/OpenLDAP/: .cvsignore  Makefile.in  Makefile.pre.in  TODO  acconfig.h  configure.ac  configure.in  ol_common.c  ol_common.h  ol_ldap.c  ol_main.c  ol_result.c
src/OpenSSL/: Makefile.in  configure.ac  openssl.c
src/PCRE/: .cvsignore  .pexts_autogen_extra  Makefile.pre.in  acconfig.h  configure.in  pcre.c
src/PCRE/pcrelib/: .cvsignore  Makefile.in  config.in  pcre.h
src/PDF/: .cvsignore  Documentation  Makefile.in  Makefile.pre.in  README  acconfig.h  configure.ac  configure.in  pdf.c
src/PDF/test/: testpdf-file.pike  testpdf-memory.pike
src/_BerkeleyDB/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  bdb.c  bdb.h  bdb_db.c  bdb_proto.h  configure.ac  configure.in
src/_FDF/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  configure.ac  configure.in  fdf_global.h  fdf_main.c
src/_Newt/: .cvsignore  Makefile.in  Makefile.pre.in  TODO  acconfig.h  component_base.c  configure.ac  configure.in  dictionary.c  functions.c  main.c  newt_global.h  t  test.in  test.pike
src/_Newt/Newt.pmod/: module.pmod
src/_XML/: .cvsignore  Makefile.in  Makefile.pre.in  TODO  acinclude.h  configure.ac  notes.txt  xml_main.c  xml_sax.c  xml_sax.h
src/_XSLT/: .cvsignore  configure.ac  xslt.c  xslt.h
src/_esmtp/: .cvsignore  Makefile.in  acconfig.h  configure.ac  configure.in  esmtp_main.c
src/bzip2/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  bz2main.c  configure.ac  configure.in  test.pike
src/gpgme/: .cvsignore  Makefile.in  Makefile.pre.in  acconfig.h  configure.ac  configure.in  gpgme_main.c
src/libxslt/: Makefile.in  autogen.sh  configure.ac  xslt.c  xslt.h
src/mcast/: .cvsignore  Makefile  Makefile.in  Makefile.pre.in  McastTxRx.pike  MultiCastUDP.pike  README  configure.ac  get_paths.sh  mcast.c  mtst.pike
src/mcrypt/: .cvsignore  Makefile.in  Makefile.pre.in  configure.ac  configure.in  mcrypt.c
src/mnoGo/: .cvsignore  Makefile.in  configure.ac  configure.in  mnogo.c  mnogo.h
