AC_INIT(atmain.c)
AC_CONFIG_HEADER(at_config.h)

PEXTS_MODULE_INIT()

AC_CHECK_HEADERS(shadow.h dirent.h)
AC_CHECK_FUNCS(getspent getspent_r opendir closedir readdir readdir_r \
               rewinddir seekdir telldir scandir alphasort versionsort) 

AC_MSG_CHECKING(for working (and failsafe) strerror)
AC_CACHE_VAL(atools_cv_func_failsafe_strerror,
[
AC_TRY_RUN([
#include <stdio.h>
#include <string.h>
int main()
{
  int e;
  char *s;
  for(e=0;e<256;e++) if(strerror(e)) if(strerror(e)[0]=='\b') exit(1);
  exit(0);
}
],atools_cv_func_failsafe_strerror=yes,atools_cv_func_failsafe_strerror=no,
  atools_cv_func_failsafe_strerror=no)
])

if test "$pike_cv_func_failsafe_strerror" = yes; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_STRERROR)
else
  AC_MSG_RESULT(no)
fi
AC_OUTPUT(Makefile.pre, [make -f Makefile.pre depend])

dnl ## Local Variables:
dnl ## tab-width: 4
dnl ## End:
	
