AC_INIT(curses.c)
AC_CONFIG_HEADER(curses_config.h)

CAUDIUM_MODULE_INIT()

AC_CHECK_HEADERS( curses.h )
AC_CHECK_LIB(curses, initscr)

AC_HAVE_HEADERS(curses.h ncurses.h ncurses/curses.h ncurses/ncurses.h)
AC_OUTPUT(Makefile.pre, [make -f Makefile.pre depend])


dnl ## Local Variables:
dnl ## tab-width: 4
dnl ## End:
	
