AC_INIT(esmtp_main.c)
AC_CONFIG_HEADER(esmtp_config.h)

CAUDIUM_MODULE_INIT()

AC_CHECK_LIB(esmtp, smtp_create_session,,)
AC_CHECK_HEADERS(libesmtp.h)
ACX_PATH_LIBESMTP(0.8.8, AC_DEFINE(HAVE_LIBESMTP))

AC_OUTPUT(Makefile.pre, [${MAKE:-make} -f Makefile.pre depend])

dnl ## Local Variables:
dnl ## tab-width: 4
dnl ## End:
	
